--- a/src/apps/home/styles.module.scss
+++ b/src/apps/home/styles.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  padding: 24px variables.$default-gap;
+  padding: 24px variables.$default-gap 24px 0;
 
   pointer-events: all;
 }
