--- a/src/components/sidekick/components/container/styles.module.scss
+++ b/src/components/sidekick/components/container/styles.module.scss
@@ -1,5 +1,6 @@
 @use '../../../../shared-components/theme-engine/theme' as theme;
 @use '../../../../modules/animation' as animation;
+@use '../../../../variables' as variables;
 
 @import '../../../../layout';
 @import '../../../../glass';
@@ -26,7 +27,7 @@
   flex-direction: column;
 
   flex-shrink: 0;
-  padding: 24px 18px 24px 0px;
+  padding: 24px variables.$default-gap 24px 0px;
 }
 
 .Wrapper {
